# apricosim-curses

./: .gitignore  LICENSE  Makefile  README.md  apricos.txt  configure.ac  versions.txt
src/: Makefile  Makefile.am  Makefile.in  aprsim.h  argparser.c  argparser.h  cpu.c  cpu.h  disassembler.c  disassembler.h  diskio.c  diskio.h  gui.c  gui.h  ports.c  ports.h  sim.c
src/.deps/: cpu.Po  gui.Po  sim.Po
